# NATLClaw

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  _build_graph.py  ado_sync.py  agent_setup.py  api.py  api_server.py  brain_index.py  capture_policy.py  cli.py  config.py  conftest.py  copilot_auth.py  core_agent_tools.py  core_suite_tests.txt  daily_digest.py  decision_engine.py  dump_brain.py  error_classification.py  event_config.py  event_watcher.py  execution_log.py  goals.py  graphifyy-0.4.1-py3-none-any.whl  handoff.py  ingest.py  learning.py  main.py  mcp.json  mcp.schema.json  messaging.py  metrics.py  notification_dispatch.py  operator_status.py  persona.schema.json  persona_loader.py  (+23 more)
.claude/: mcp.json  settings.json  settings.local.json
.github/workflows/: core-suite.yml
.wolf/: anatomy.md  buglog.json  cerebrum.md  cron-state.json  identity.md  memory.md  token-ledger.json
.wolf/hooks/: _session.json
artifacts/: poc-smoke-evidence.json  poc-smoke-state.json
connectors/: __init__.py  ado.py  base.py  graph_auth.py  outlook.py  teams.py
docs/: Report_4-12-26.md  audit-findings.md  brain-evolution.md  codebase-learner.md  codeintel-integration.md  comprehensive-hybrid-trigger-architecture.md  concept.md  connectors.md  core-poc-dod-evidence.md  coworker-interaction-model.md  coworker-it-features.md  coworker-roadmap.md  coworker-vision.md  decision-engine-plan.md  dreaming-v1.md  improvements.md  insurance-portal.md  knowledge-quality.md  move-a-plan.md  openclaw-comparison.md  openclaw-session-routing-design.md  openclaw-surface-adoption-plan.md  openclaw-surface-architecture.md  openclaw-surface-boundary-policy.md  openclaw-surface-contract-examples.md  openclaw-surface-mvp-design.md  openclaw-surface-rollout.md  operator-runbook.md  personas.md  phased-trigger-implementation.md  requirements.md  scrum-team.md  second-brain-research.md  second-brain.md  spec.md  sprint-board-2-week.md  surface-event-v1.schema.json  tiered-memory.md
docs/agentops/: architecture.md  requirements.md  spec.md
docs/releases/: core-poc-checkpoint-2026-04-14.md
personas/codebase_learner/: BRAIN.md  HEARTBEAT.md  instructions.md  tools.py
personas/default/: BRAIN.md  HEARTBEAT.md  instructions.md
personas/devops_engineer/: BRAIN.md  HEARTBEAT.md  instructions.md  tools.py
personas/dotnet_developer/: instructions.md  tools.py
personas/project_manager/: instructions.md  tools.py
personas/python_developer/: instructions.md  tools.py
personas/qa_engineer/: instructions.md  tools.py
personas/react_developer/: instructions.md  tools.py
personas/researcher/: instructions.md
personas/workspace_observer/: BRAIN.md  DECISIONS.md  HEARTBEAT.md  capture.py  instructions.md  tools.py
prompts/coding_agent/: capture.txt  (+3 more)
tests/: conftest.py
(+89 files in other folders)
