[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "natlclaw"
version = "0.1.0"
description = "NATLClaw - Autonomous Second-Brain Agent"
readme = "README.md"
authors = [{name = "Your Name"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["agent", "second-brain", "automation", "memory", "learning"]
requires-python = ">=3.8"
dependencies = [
    "python-dotenv>=1.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
]

[project.scripts]
natl = "cli:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/natlclaw"
"Documentation" = "https://github.com/yourusername/natlclaw#readme"
"Issues" = "https://github.com/yourusername/natlclaw/issues"

[tool.setuptools]
py-modules = [
    "agent_setup", "api_server", "brain_index", "capture_policy", "cli", "config",
    "copilot_auth", "daily_digest", "decision_engine", "dump_brain",
    "event_config", "event_watcher", "execution_log", "goals",
    "ingest", "learning", "messaging", "metrics", "persona_loader", "preference_feedback",
    "project_context", "prompts", "scheduler", "scheduler_control", "second_brain",
    "state", "tasks", "workflow", "operator_status", "error_classification", "poc_smoke",
    "telemetry",
]
include-package-data = true